test/tests/errors/error-class-file-out-of-scope.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        file f withbuffer b: int;
    }

    reset(f);
}